# pySEACR

./: README.md  SEACR_1.3.new.py  SEACR_1.3.new.sh  __main__.py  auc_bed_file.py  auc_from_bdg.py  bdg_to_auc.py  new_seacr.py  new_seacr.scipy.py  new_seacr.stats.py  normalize.py  pct_remain.py  pyproject.toml  read_auc_bed.py  round.py  threshold_finder.py  utils.py
pySEACR/: __main__.py  auc_from_bdg.py  normalize.py  utils.py
pySEACR.egg-info/: PKG-INFO  SOURCES.txt
