[build-system]
requires = ["setuptools>=68.2.2", "numpy>=1.26.1", "scipy>=1.11.3", "scikit-learn>=1.4.1", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "pySEACR"
description = "Sparse Enrichment Analysis for CUT&RUN"
authors = [
  { name="Adam Handen", email="adam.handen@gmail.com" }
]
license = {file="LICENSE"}
readme = "README.md"

keywords = ["bioinformatics", "RNA", "editing"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

requires-python = ">=3.12.0"
dependencies = ["setuptools>=68.2.2", "numpy>=1.26.1", "scipy>=1.11.3"]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ahanden/pySEACR"
repository = "https://github.com/ahanden/pySEACR"
issues = "https://github.com/ahanden/pySEACR/issues"

